objects/VCG_CPQ_Quote_Product__c.object
<CustomObject>
    <fields>
        <fullName>Add_On_To_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add-On To Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Add-On Quote Products</relationshipLabel>
        <relationshipName>Add_On_Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_on_Source_Quote_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add-on Source Quote Product</label>
        <referenceTo>VCG_CPQ_Quote_Product__c</referenceTo>
        <relationshipLabel>Add On Quote Products</relationshipLabel>
        <relationshipName>Add_On_Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_ID__c</fullName>
        <formula>Product__r.Output_Schedule_Template__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addendum_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjusted_List_Price__c</fullName>
        <label>Adj List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Price_Cap__c</fullName>
        <label>Annual Price Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Recurring_Revenue__c</fullName>
        <description>aka "Annual Recurring Revenue". For Subscription products, ARR == Sales Price, for Perpetual products, ARR == X% of list (X is data lookup based on Product Type &amp; Product Family). Extended amount, not a per-unit amount.</description>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Quantity__c</fullName>
        <formula>Asset__r.License_Metric_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_Term_End_Date__c</fullName>
        <label>Asset Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Term_Start_Date__c</fullName>
        <label>Asset Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Added_QP_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by the CPQ tool if the QP record was auto-added by the tool (as opposed to added by the user). Used to differentiate between QP records for products that can be auto-added or manually added.</description>
        <label>Auto-Added QP Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Quote Products (Ship To)</relationshipLabel>
        <relationshipName>Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>BillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                    <default>true</default>
                    <label>Annual</label>
                </value>
                <value>
                    <fullName>Semi Annually</fullName>
                </value>
                <value>
                    <fullName>On Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookings_Eligible__c</fullName>
        <formula>Product__r.Bookings_Eligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Name__c</fullName>
        <description>If populated, indicates that this product is part of a named bundle. CPQ Tool will recombine these products back into the "bundle" representation when displaying back to the user.</description>
        <label>Bundle Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CGM__c</fullName>
        <inlineHelpText>Commissionable Gross Margin</inlineHelpText>
        <label>CGM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Output_Table__c</fullName>
        <label>CPQ Output Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Wide_Commission__c</fullName>
        <label>City Wide Commission %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Term_End_Date__c</fullName>
        <label>Contract Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Start_Date__c</fullName>
        <label>Contract Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <description>Contract Term in months</description>
        <inlineHelpText>Contract Term in months</inlineHelpText>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Price__c</fullName>
        <description>For products that have a "product display type" = Custom Price, CPQ will display this field</description>
        <label>Custom Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Pricing_Qualifier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Pricing Qualifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decommission_Effective_Date__c</fullName>
        <label>Decommission Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decommission_Quantity__c</fullName>
        <label>Decommission Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decommission_Reason__c</fullName>
        <label>Decommission Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gone out of business</fullName>
                </value>
                <value>
                    <fullName>Move to a different product family</fullName>
                </value>
                <value>
                    <fullName>Change order after signing</fullName>
                </value>
                <value>
                    <fullName>Opt-out</fullName>
                </value>
                <value>
                    <fullName>Reduction in number of licenses</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>Sent to collections</fullName>
                </value>
                <value>
                    <fullName>Using via another customer</fullName>
                </value>
                <value>
                    <fullName>First year cancel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decommission_Type__c</fullName>
        <label>Decommission Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reduction</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decommission_Value__c</fullName>
        <formula>IF(ISPICKVAL(Line_Type__c, 'Renewal') &amp;&amp; Asset_Quantity__c &gt; License_Metric_Quantity__c , (Asset_Quantity__c - License_Metric_Quantity__c) * (Previous_Asset_Price__c/Asset_Quantity__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decommission Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Annual_Price_Cap__c</fullName>
        <label>Default Annual Price Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Merchant_Services_Fee__c</fullName>
        <label>Default Merchant Services Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Overage_Fee__c</fullName>
        <label>Default Overage Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Web_Revenue_Commission__c</fullName>
        <label>Default Web Revenue Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Delivery_Schedule__c</fullName>
        <label>Delivery Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>within Initial Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Groups__c</fullName>
        <label>Discount Approval Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Entered_As__c</fullName>
        <description>User can enter the discount as either a total dollar amount or a percentage. The other value will be calculated and stored in the record. Calculations should be done using the value the user enters, and the UI should display only the value they enter back to the user.</description>
        <label>Discount Entered As</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Percentage_0_5__c</fullName>
        <formula>IF(AND((((List_Price__c - Sales_Price__c) / List_Price__c) &gt; 0), (((List_Price__c - Sales_Price__c) / List_Price__c) &lt; 0.05)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage: 0 - 5%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage_10_20__c</fullName>
        <formula>IF(AND((((List_Price__c - Sales_Price__c) / List_Price__c) &gt;= 0.10), (((List_Price__c - Sales_Price__c) / List_Price__c) &lt;= 0.20)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage: 10 - 20%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage_20__c</fullName>
        <formula>IF(((List_Price__c - Sales_Price__c) / List_Price__c) &gt; 0.20, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage:20%+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage_5_10__c</fullName>
        <formula>IF(AND((((List_Price__c - Sales_Price__c) / List_Price__c) &gt;= 0.05), (((List_Price__c - Sales_Price__c) / List_Price__c) &lt; 0.10)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage: 5 - 10%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <description>Discretionary Discount entered by the user. In the UI, user can enter a currency amount or a percentage. If they enter a currency amount, the amount gets converted to a percentage before being stored.</description>
        <label>Discount Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EBS_Inventory_Item_ID__c</fullName>
        <formula>Product__r.EBS_Inventory_Item_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS Inventory Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Merchant_Services_Revenue__c</fullName>
        <label>Estimated Merchant Services Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Merchant_Services_Volume__c</fullName>
        <label>Estimated Merchant Services Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Paygo_Revenue__c</fullName>
        <label>Estimated Paygo Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Size__c</fullName>
        <label>Event Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extended_Term_Amount__c</fullName>
        <description>Amount charged for year 2 onward. (Total Contract Value == First Term Revenue + Extended Term Amount; TCV is captured at the Opp level, not at the Quote Product level.) Extended amount, not per-unit amount.</description>
        <label>Extended Term Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>From_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Migrations and Upgrades, this is the legacy asset the current product is being migrated/updated from.</description>
        <inlineHelpText>For Migrations and Upgrades, this is the legacy asset the current product is being migrated/updated from.</inlineHelpText>
        <label>From Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Migrations and Upgrades, this is the legacy product the current product is being migrated/updated from.</description>
        <inlineHelpText>For Migrations and Upgrades, this is the legacy product the current product is being migrated/updated from.</inlineHelpText>
        <label>From Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GenieConnect_Solution_Discount__c</fullName>
        <label>GenieConnect Solution Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Go_Back_to_Default_Overage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Go Back to Default Overage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Business__c</fullName>
        <label>Group Business %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ignore_on_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore on Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResultValueOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsResultValueOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Source Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Metric_Quantity__c</fullName>
        <label>License Metric Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Decommission</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>Initial List Price from pricing data (LP01 usually). This is an Extended amount, not per-unit.</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Package_Qualifiers__c</fullName>
        <label>Marketing Package Qualifiers</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Services_Discount_Uplift__c</fullName>
        <inlineHelpText>Discount = Positive 
Uplift = Negative</inlineHelpText>
        <label>Merchant Services Discount/Uplift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Merchant_Services_Fee__c</fullName>
        <label>Merchant Services Fee</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_New_Annual_Recurring_Revenue__c</fullName>
        <description>aka "Net New Annual Recurring Revenue". For New products and Extensions, NNARR == Sales Price; for Renewal, NNARR == Quote ARR - Asset ARR; For decom, TBD; for Migration, TBD. Extended amount, not per-unit amount.</description>
        <label>NNARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Bookings_Amount_V2__c</fullName>
        <formula>IF(CASE(Recurring_vs_Non_Recurring__c , "Recurring", 0, "Non-Recurring", Term_Amount__c ,0)&lt;0,0,CASE(Recurring_vs_Non_Recurring__c , "Recurring", 0, "Non-Recurring", Term_Amount__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Recurring Bookings Amount V2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Bookings_Amount__c</fullName>
        <label>Annual Non-Recurring Bookings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Revenue__c</fullName>
        <inlineHelpText>Non-recurring revenue</inlineHelpText>
        <label>NRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Audited_Month__c</fullName>
        <label>Days Audited/Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_GDS_s__c</fullName>
        <label>Number of GDS's</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Guest_Rooms__c</fullName>
        <label># Guest Rooms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;200</fullName>
                </value>
                <value>
                    <fullName>201-749</fullName>
                </value>
                <value>
                    <fullName>750+</fullName>
                </value>
                <value>
                    <fullName>500-999</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Months_Audited_Year__c</fullName>
        <label>Months Audited/Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Tile_Ad__c</fullName>
        <label>Number of Months (Tile Ad)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Number of Sites</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Impact__c</fullName>
        <formula>CASE(Line_Type__c, "Decommission", Annual_Recurring_Revenue__c, "New", Term_Amount__c ,"Renewal",Term_Amount__c-Previous_Asset_Price__c,"Extension",Term_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Output_Footnote__c</fullName>
        <formula>' '</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Output Footnote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_5000__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over 5000</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overage_Fee__c</fullName>
        <label>Overage Fee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overage_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked by CPQ is user enters an overage fee manually</description>
        <label>Overage Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Count__c</fullName>
        <description>The number of override records that apply to this Quote Product record. Makes it easier to know whether there are any other remaining overrides (when clearing overrides).</description>
        <label>Override Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peer_Add_On_Type__c</fullName>
        <label>Peer Add-On Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Star</fullName>
                </value>
                <value>
                    <fullName>2 Star</fullName>
                </value>
                <value>
                    <fullName>3 Star</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Peer_Add_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Peer Add On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Asset_Price__c</fullName>
        <label>Previous Asset Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Asset_Qty__c</fullName>
        <label>Previous Asset Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Change_Amount__c</fullName>
        <formula>IF(Asset_Quantity__c &gt; 0 &amp;&amp; Asset_Quantity__c &gt;  License_Metric_Quantity__c  &amp;&amp; ISPICKVAL(Line_Type__c,'Renewal'), License_Metric_Quantity__c  * ((  Price_per_Unit__c) - (Previous_Asset_Price__c/Asset_Quantity__c)), 
IF(Asset_Quantity__c &gt; 0 &amp;&amp; Asset_Quantity__c &lt; License_Metric_Quantity__c &amp;&amp; ISPICKVAL(Line_Type__c,'Renewal'), Asset_Quantity__c * (( Price_per_Unit__c) - (Previous_Asset_Price__c/Asset_Quantity__c)), 
IF(Asset_Quantity__c &gt; 0 &amp;&amp; Asset_Quantity__c = License_Metric_Quantity__c  &amp;&amp; ISPICKVAL(Line_Type__c,'Renewal'), (Price_per_Unit__c * License_Metric_Quantity__c) - Previous_Asset_Price__c, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Change Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_per_Unit__c</fullName>
        <formula>Sales_Price__c /  License_Metric_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family_Grouping__c</fullName>
        <formula>Product__r.Product_Family_Grouping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>TEXT(Product__r.Product_Line__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(Product__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Products (Product)</relationshipLabel>
        <relationshipName>Quote_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PureSend_Volume__c</fullName>
        <label>PureSend Volume</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Product__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Bookings_Amount_WFR__c</fullName>
        <label>Raw Bookings Amount (WFR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Bookings_Amount_V2__c</fullName>
        <formula>IF(CASE(Recurring_vs_Non_Recurring__c , "Recurring", IF(ISPICKVAL(Line_Type__c,"Extension"), Term_Amount__c, Term_Amount__c - Previous_Asset_Price__c), "Non-Recurring", 0,0)&lt;0,0,CASE(Recurring_vs_Non_Recurring__c , "Recurring", IF(ISPICKVAL(Line_Type__c,"Extension"), Term_Amount__c, Term_Amount__c - Previous_Asset_Price__c), "Non-Recurring", 0,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Bookings Amount V2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Bookings_Amount__c</fullName>
        <label>Annual Recurring Bookings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_vs_Non_Recurring__c</fullName>
        <formula>IF(Product__r.Is_Non_Recurring__c = true, "Non-Recurring", "Recurring")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring vs Non-Recurring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduction_Amount__c</fullName>
        <formula>/* 
Line_Type__c (New, Extension, Renewal, Decommission, Migration) 
Quantity 
Asset_Quantity__c 
***Do NOT use Sales_Price__c*** 
UnitPrice 
Previous_Asset_Price__c 
*/ 

IF(ISPICKVAL(Line_Type__c, 'Renewal') &amp;&amp; License_Metric_Quantity__c &gt; 0 &amp;&amp; Asset_Quantity__c &gt; License_Metric_Quantity__c, (Asset_Quantity__c - License_Metric_Quantity__c) * (Previous_Asset_Price__c/Asset_Quantity__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reduction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>